import Foundation

enum CollectionType: String, CaseIterable {
    case array = "Array"
    case set = "Set"
    case dictionary = "Dictionary"
}
