...
        setupUI()
        setupHelpers()
    }
    
    //MARK: Setup UI
    private func setupUI() {
        self.navigationItem.title = "Arrays"
        self.navigationItem.largeTitleDisplayMode = .never
    }
    
    //MARK: Setup Delegate & DataSource
    
    private func setupHelpers() {
...
